<resources>
    <string name="app_name">Invento</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_err">Sign In failed, please try again</string>

    <string name="your_name">Your Name</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="dont_have_account_sign_up_now">Don\'t have account? </string>
    <string name="welcome">"Welcome"</string>
    <string name="action_signIn">Sign in</string>
    <string name="action_signUp">Sign up</string>
    <string name="email_empty">"Email could be letters and numbers with @email.com"</string>
    <string name="captureFail">"Capture failed"</string>
    <string name="openCamFail">"Failed to open camera"</string>
    <string name="name_empty">"Please fill the name field"</string>
    <string name="pass_empty">"Password cannot be empty, must be at least 8 character"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="message_desc">"Enter the description box"</string>
    <string name="failedCamera">"Camera failed"</string>
    <string name="desc_empty">"Please fill the description field"</string>
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="valid_email">"Please fill up your valid email"</string>
    <string name="signIn_failed">"Sign in failed"</string>
    <string name="name">Name</string>
    <string name="post">Post some story</string>
    <string name="sign_up_alert">Don\'t have account?</string>
    <string name="sign_up_action">Sign up now!</string>
    <string name="account_created">Account created</string>
    <string name="data_error" translatable="false">Data error</string>
    <string name="Welcome...">welcome</string>
    <string name="sign_up_fail">Sign Up failed, Account not created</string>
    <string name="post_content">post_content</string>
    <string name="post_image">post_image</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="post_img">Posted image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_act">Home Stories</string>
    <string name="detail_act">Detail Stories</string>
    <string name="register_act">Sign Up</string>
    <string name="login_act">Sign In</string>

    <string name="already_have_account">Already have account?</string>
    <string name="logo_slogan">logo_slogan</string>
    <string name="slogan">Share your story and join the community. Experience a world of stories through your lens</string>
    <string name="don_t_have_accaount">Don\'t have accaount?</string>
    <string name="capture_an_image">Capture an Image</string>
    <string name="switch_the_camera">Switch the camera</string>
    <string name="gallery">Gallery</string>
    <string name="camerax">Camerax</string>
    <string name="upload">Upload</string>
    <string name="preview_image">preview image</string>
    <string name="view_the_gallery">View the gallery</string>
    <string name="description">Description</string>
    <string name="title_activity_hello">helloActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="postAct">Post Story</string>
    <string name="login_first">You should Login first</string>
    <string name="account_not_created">Account haven\'t yet created</string>
    <string name="cancel_picture">Choosing cancelled by user</string>
    <string name="insert_image">Insert some Image please</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="location">Location</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
    <string name="what_s_your_interests">What\'s your interests?</string>

</resources>